--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 80
+
+eureka:
+  client:
+    register-with-eureka: true   #是否将自己注册到注册中心,集群必须设置为true配合ribbon
+    fetch-registry: true    #是否从服务端抓取已有的注册信息
+    service-url:
+      defaultZone: http://eureka7001.com/eureka, http://eureka7002.com:7002/eureka
+
+# 服务名称 在eureka注册中心中的instance name
+spring:
+  application:
+    name: cloud-order-service
